# coba

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LANGUAGE_SPEC.md  PROJECT_STATUS.md  README.md  SYNTAX_UPDATE_SUMMARY.md  outline.md  todo.md
crates/coba-ast/: Cargo.toml
crates/coba-ast/src/: cobol_ast.rs  expr.rs  intrinsics.rs  lib.rs  program.rs  stmt.rs  types.rs
crates/coba-cli/: Cargo.toml
crates/coba-cli/src/: main.rs
crates/coba-codegen/: Cargo.toml
crates/coba-codegen/src/: coba_gen.rs  cobol_gen.rs  lib.rs  name_mangler.rs
crates/coba-lexer/: Cargo.toml
crates/coba-lexer/src/: cobol_lexer.rs  cobol_token.rs  lexer.rs  lib.rs  token.rs
crates/coba-parser/: Cargo.toml
crates/coba-parser/src/: error.rs  lib.rs  parser.rs
crates/coba-semantic/: Cargo.toml
crates/coba-semantic/src/: analyzer.rs  lib.rs  scope.rs  symbol_table.rs  type_checker.rs
examples/: advanced_features.coba  control_flow.coba  helloworld.coba  print_demo.coba  simple.coba  types.coba
test/: helloworld  helloworld.cob
